# bootstraps

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  marketplace.json  registry.json  validate-all.sh
.claude-plugin/: marketplace.json
plugins/bootstrap-docs/: SKILL.md  plugin.json
plugins/bootstrap-docs/.claude-plugin/: plugin.json
plugins/bootstrap-docs/assets/: adr-template.md  plan-template.md  research-template.md
plugins/bootstrap-worktrees/.claude-plugin/: plugin.json
plugins/implement-cli/: run.sh
plugins/implement-cli/.claude-plugin/: plugin.json
plugins/implement-cli/scripts/: pyproject.toml
plugins/implement-cli/scripts/src/implement_cli/: __init__.py  address.py  cli.py  implement.py  merge.py  orchestrate.py  plan.py  prompts.py  review.py  sdk.py  summary.py  tracking.py  types.py  verify.py
plugins/implement-cli/scripts/tests/: test_cli.py  test_orchestrate.py  test_prompts.py  test_review.py  test_sdk.py  test_summary.py  test_tracking.py  test_types.py
plugins/implement-lifecycle/.claude-plugin/: plugin.json
plugins/implement-lifecycle/agents/: review-architecture.md  review-correctness.md  review-docs.md  review-security.md  review-standards.md  review-testing.md
plugins/implement-team/.claude-plugin/: plugin.json
plugins/implement-team/agents/: team-implementer.md  team-reviewer-architecture.md  team-reviewer-correctness.md  team-reviewer-docs.md  team-reviewer-security.md  team-reviewer-testing.md  team-verifier.md
plugins/stop-guard/: README.md
skills/bootstrap-docs/: meta.json  skill.md
(+51 files in other folders)
