[project]
name = "implement-cli"
version = "1.0.0"
description = "CLI-based multi-provider implementation lifecycle orchestrator using the Python Agent SDK"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "claude-agent-sdk>=0.1.40",
]

[project.scripts]
implement-cli = "implement_cli.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/implement_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
